# fuo_bot

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-release.yaml
alembic/: env.py
fuo/: bot.py  config.py  db.py  log.py  main.py  run.py
fuo/app/: app.py  cors.py
fuo/app/v1/: __init__.py  user.py  utils.py
fuo/cogs/: __init__.py  channel_cog.py  chat_cog.py  post_cog.py  question_cog.py  role_cog.py  score_cog.py
fuo/migrations/: __init__.py  alembic.ini  env.py  run.py
fuo/migrations/versions/: 5df712964956_add_score_logs_table.py  be7e9de3ccb7_add_score_symbols_table.py  f3061e8f8bba_add_cooldown_to_score_configs.py  fa6f4afaf609_init_create_tables.py
fuo/model/: __init__.py  question.py
fuo/models/: __init__.py  base.py  channel.py  score.py
fuo/utils/: __init__.py  check.py  converter.py  emoji.py
