[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fuo"
authors = [
    {name = "iwehf", email = "mh739025250@gmail.com"},
]
description = "Fuo discord bot"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "discord~=2.2.3",
    "SQLAlchemy~=2.0.13",
    "tabulate~=0.9.0",
    "PyYAML~=6.0",
    "emoji~=2.2.0",
    "aiomysql~=0.1.1",
    "alembic~=1.11.1"
]
version = "0.0.1"

[tool.setuptools]
packages = ["fuo"]

[project.scripts]
fuo-bot = "fuo.main:main"
